# server_ipc_clean_test

./: .gitmodules  CMakeLists.txt
framework/: CMakeLists.txt
framework/include/: entryPoint.hpp
framework/include/core/: application.hpp  delegate.hpp  icontroller.hpp  ipresenter.hpp  iusecase.hpp
framework/src/: entryPoint.cpp
server/: CMakeLists.txt  resources.qrc
server/include/controller/: bcrReceiveController.hpp  bcrRequestController.hpp  loggerController.hpp  serverController.hpp  vasInfoController.hpp  verificationController.hpp
server/include/controller/DAInterface/: ipcVisitor.hpp
server/include/main/: server.hpp
server/include/presenter/: bcrReceivePresenter.hpp  bcrRequestPresenter.hpp  loggerPresenter.hpp  serverPresenter.hpp  vasInfoPresenter.hpp  verificationPresenter.hpp
server/include/presenter/viewInterface/: viewmodelInterface.hpp  viewmodelRegistry.hpp
server/include/presenter/viewmodels/: iViewmodel.hpp  namedValue.hpp  types.hpp  vasMenuList.hpp
server/include/usecase/: bcrReceiveUsecase.hpp  bcrRequestUsecase.hpp  loggerUsecase.hpp  serverUsecase.hpp  vasInfoUsecase.hpp  verificationUsecase.hpp
server/src/controller/: bcrReceiveController.cpp  bcrRequestController.cpp  loggerController.cpp  serverController.cpp  vasInfoController.cpp  verificationController.cpp
server/src/controller/DAInterface/: ipcVisitor.cpp
server/src/main/: server.cpp
server/src/presenter/: bcrReceivePresenter.cpp  bcrRequestPresenter.cpp  loggerPresenter.cpp  serverPresenter.cpp  vasInfoPresenter.cpp  verificationPresenter.cpp
server/src/presenter/viewInterface/: viewmodelInterface.cpp  viewmodelRegistry.cpp
server/src/usecase/: bcrReceiveUsecase.cpp  bcrRequestUsecase.cpp  loggerUsecase.cpp  serverUsecase.cpp  vasInfoUsecase.cpp  verificationUsecase.cpp
server/view/component/: CBackground.qml  CButton.qml  CButtonGroup.qml  CLabel.qml  CLed.qml  CMenu.qml  CPanel.qml  CRangeSpinBox.qml  CSubpanel.qml  CTextArea.qml  CTextField.qml  qmldir
server/view/constant/: Constants.qml  qmldir
server/view/form/: BCRData.qml  BCRRequestAck.qml  ButtonPanel.qml  ControlPanel.qml  InputPanel.qml  Logger.qml  Main.qml  ResultPanel.qml  VASInfo.qml  Verification.qml  VerificationState.qml  WarningPanel.qml
