

add_library(${FRAMEWORK_TARGET_NAME} STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src/entryPoint.cpp
)

target_include_directories(${FRAMEWORK_TARGET_NAME}
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

set_target_properties(${FRAMEWORK_TARGET_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)
